visibility transition fixed

--- a/scss/components/_slide_panel.scss
+++ b/scss/components/_slide_panel.scss
@@ -196,6 +196,7 @@
   top: 0%;
   left: 0%;
   visibility: hidden;
+  opacity: 0;
   height: 100vh;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.3);
@@ -204,7 +205,8 @@
   cursor: pointer;
 
   &.overlay_opened {
-    z-index: 989;
+    z-index: 991;
+    opacity: 1;
     visibility: visible;
   }
 }
